--- a/CCFS Tickets/Src/Ticket Information.fx.yaml
+++ b/CCFS Tickets/Src/Ticket Information.fx.yaml
@@ -247,6 +247,10 @@
                             LayoutGap: =2
                             LayoutMode: =LayoutMode.Auto
                             LayoutWrap: =true
+                            PaddingBottom: =2
+                            PaddingLeft: =2
+                            PaddingRight: =2
+                            PaddingTop: =2
                             RadiusBottomLeft: =4
                             RadiusBottomRight: =4
                             RadiusTopLeft: =4
@@ -267,7 +271,6 @@
                                 FontWeight: =""
                                 Height: =TicketResetFormbtn.Height
                                 LayoutMinHeight: =32
-                                LayoutMinWidth: =40
                                 OnSelect: |
                                     =// Determine the mode of the TicketDataEditForm and set the NewTicket flag accordingly
                                     Set(
@@ -362,7 +365,7 @@
 
                             TicketResetFormbtn As Button:
                                 Appearance: ='ButtonCanvas.Appearance'.Primary
-                                BasePaletteColor: =RGBA(247, 116, 38, 1)
+                                BasePaletteColor: =RGBA(189, 178, 176, 1)
                                 DisplayMode: =DisplayMode.Edit
                                 FillPortions: =1
                                 Font: =""
@@ -374,114 +377,12 @@
                                 FontWeight: =""
                                 Height: =32
                                 LayoutMinHeight: =32
-                                LayoutMinWidth: =40
                                 OnSelect: =ResetForm(TicketDataEditForm)
                                 Text: ="Reset Form"
                                 Width: =96
                                 X: =592
                                 Y: =40
                                 ZIndex: =3
-
-                            CreateSRAndSave As Button:
-                                BasePaletteColor: =
-                                DisplayMode: =DisplayMode.Edit
-                                FillPortions: =1
-                                Font: =""
-                                FontColor: =
-                                FontItalic: =false
-                                FontSize: =0
-                                FontStrikethrough: =false
-                                FontUnderline: =false
-                                FontWeight: =""
-                                Height: =32
-                                LayoutMinHeight: =32
-                                LayoutMinWidth: =40
-                                OnSelect: |+
-                                    =// Determine the mode of the TicketDataEditForm and set the NewTicket flag accordingly
-                                    Set(
-                                        IsNewTicket,
-                                        TicketDataEditForm.Mode = FormMode.New
-                                    );
-                                    // Clear and collect data into TicketDataFormProcess based on the mode
-                                    ClearCollect(
-                                        TicketDataFormProcess,
-                                        {
-                                            Ticket_ID: Text(varTicketID.Ticket_ID),
-                                            NewTicket: IsNewTicket,
-                                            Subject: DataCardValue36.Value,
-                                            TicketBody: Text(DataCardValue35.Value),
-                                            SiteID: Int(DataCardValue37.Selected.ID),
-                                            TicketCategoryID: Int(DataCardValue34.Selected.ID),
-                                            TicketStatusID: Int(DataCardValue30.Selected.ID),
-                                            Private: If(
-                                                CheckboxCanvas_Private.Checked,
-                                                1,
-                                                0
-                                            ),
-                                            SeverityID: DataCardValue38.Selected.ID,
-                                            AssetID: DataCardValue57.Selected.ID,
-                                            TicketContactName: Text(DataCardValue32.Selected.displayName),
-                                            TicketContactEmail: Text(DataCardValue32.Selected.mail),
-                                            AssignedName: Text(DataCardValue55.Selected.displayName),
-                                            AssignedEmail: Text(DataCardValue55.Selected.mail),
-                                            Ticket_Status_Id: Int(DataCardValue30.Selected.ID),
-                                            Followers: Concat(
-                                                DataCardValue20.SelectedItems,
-                                                displayName,
-                                                ","
-                                            ),
-                                            EstimatedCompletionDate: EsitmatedCompleteDate.SelectedDate,
-                                            CreatedDate: If(
-                                                IsNewTicket,
-                                                Now(),
-                                                Created_Date_DataCard1.Default
-                                            ),
-                                            LastModifiedBy: User().FullName,
-                                            LastModifiedDate: Now(),
-                                            ClosedDate: Closed_Date_DataCard1.Update,
-                                            Version: If(
-                                                IsNewTicket,
-                                                1,
-                                                Version_DataCard2.Default + 1
-                                            ),
-                                            CreatedBy: If(
-                                                IsNewTicket,
-                                                User().FullName,
-                                                LastCreatedBy_DataCard1.Default
-                                            )
-                                        }
-                                    );
-                                    // Notify if there was an issue with the action
-                                    If(
-                                        IsBlank(TicketDataFormProcess),
-                                        Notify(
-                                            "There was an issue with this action.",
-                                            NotificationType.Error
-                                        ),
-                                        Set(
-                                            returnID,
-                                            Process_Ticket_Form_Data.Run(JSON(TicketDataFormProcess))
-                                        );
-                                        
-                                    );
-                                    Set(
-                                        varTicketID,
-                                        LookUp(
-                                            Tickets_Master,
-                                            Ticket_ID = Int(returnID.ticketid)
-                                        );
-                                        
-                                    );
-                                    EditForm(TicketDataEditForm);
-                                    NewForm(ServiceRequestForm);
-                                    Set(SRFormPopUpVisble,true);
-                                    
-                                    
-                                Text: ="Save and Start Service Request "
-                                Width: =96
-                                X: =0
-                                Y: =0
-                                ZIndex: =4
 
                             TicketFormSaveBtn_2 As Button:
                                 BasePaletteColor: =RGBA(246, 142, 104, 1)
@@ -496,7 +397,6 @@
                                 FontWeight: =""
                                 Height: =TicketResetFormbtn.Height
                                 LayoutMinHeight: =32
-                                LayoutMinWidth: =40
                                 OnSelect: |
                                     =// Determine the mode of the TicketDataEditForm and set the NewTicket flag accordingly
                                     Set(
