--- a/CCFS Tickets/Src/Ticket Information %28In Progress%29.fx.yaml
+++ b/CCFS Tickets/Src/Ticket Information %28In Progress%29.fx.yaml
@@ -45,7 +45,7 @@
         Container5 As groupContainer.horizontalAutoLayoutContainer:
             DropShadow: =DropShadow.Light
             FillPortions: =0
-            Height: =70
+            Height: =60
             LayoutMinHeight: =60
             LayoutMinWidth: =250
             LayoutMode: =LayoutMode.Auto
@@ -90,7 +90,7 @@
                         Color: =RGBA(40, 134, 222, 1)
                         DisabledBorderColor: =RGBA(166, 166, 166, 1)
                         DisabledColor: =RGBA(244, 244, 244, 1)
-                        Height: =32
+                        Height: =30
                         Icon: =Icon.Home
                         OnSelect: |
                             =Navigate(Dashboard)
@@ -102,7 +102,7 @@
                         Color: =RGBA(71, 158, 245, 1)
                         DisabledBorderColor: =RGBA(166, 166, 166, 1)
                         DisabledColor: =RGBA(244, 244, 244, 1)
-                        Height: =32
+                        Height: =30
                         Icon: =Icon.BackArrow
                         OnSelect: =Back()
                         Width: =32
@@ -161,6 +161,7 @@
                             ZIndex: =11
 
             Header1_6 As Header:
+                AlignInContainer: =AlignInContainer.Center
                 BasePaletteColor: =
                 DisplayMode: =DisplayMode.Edit
                 Font: =""
@@ -382,30 +383,7 @@
                                 Width: =96
                                 X: =40
                                 Y: =40
-                                ZIndex: =2
-
-                            TicketResetFormbtn_2 As Button:
-                                AlignInContainer: =AlignInContainer.Center
-                                Appearance: ='ButtonCanvas.Appearance'.Primary
-                                BasePaletteColor: =RGBA(247, 116, 38, 1)
-                                DisplayMode: =DisplayMode.Edit
-                                FillPortions: =1
-                                Font: =""
-                                FontColor: =
-                                FontItalic: =false
-                                FontSize: =0
-                                FontStrikethrough: =false
-                                FontUnderline: =false
-                                FontWeight: =""
-                                Height: =32
-                                LayoutMinHeight: =32
-                                LayoutMinWidth: =150
-                                OnSelect: =ResetForm(TicketDataEditForm_1)
-                                Text: ="Reset Form"
-                                Width: =96
-                                X: =592
-                                Y: =40
-                                ZIndex: =3
+                                ZIndex: =1
 
                             CreateSRAndSave_1 As Button:
                                 BasePaletteColor: =
@@ -506,7 +484,30 @@
                                 Width: =96
                                 X: =0
                                 Y: =0
-                                ZIndex: =4
+                                ZIndex: =2
+
+                            TicketResetFormbtn_2 As Button:
+                                AlignInContainer: =AlignInContainer.Center
+                                Appearance: ='ButtonCanvas.Appearance'.Primary
+                                BasePaletteColor: =RGBA(141, 229, 250, 1)
+                                DisplayMode: =DisplayMode.Edit
+                                FillPortions: =1
+                                Font: =""
+                                FontColor: =
+                                FontItalic: =false
+                                FontSize: =0
+                                FontStrikethrough: =false
+                                FontUnderline: =false
+                                FontWeight: =""
+                                Height: =32
+                                LayoutMinHeight: =32
+                                LayoutMinWidth: =150
+                                OnSelect: =ResetForm(TicketDataEditForm_1)
+                                Text: ="Reset Form"
+                                Width: =96
+                                X: =592
+                                Y: =40
+                                ZIndex: =3
 
                             TicketFormSaveBtn_4 As Button:
                                 AlignInContainer: =AlignInContainer.Center
@@ -609,7 +610,7 @@
                                 Width: =96
                                 X: =40
                                 Y: =40
-                                ZIndex: =5
+                                ZIndex: =4
 
                     Site_ID_DataCard3_1 As typedDataCard.numberEditCard:
                         BorderColor: =RGBA(0, 89, 178, 1)
@@ -1341,7 +1342,7 @@
                         Required: =false
                         Update: =DataCardValue57_1.Selected.ID
                         Width: =260
-                        WidthFit: =true
+                        WidthFit: =false
                         X: =0
                         Y: =3
                         ZIndex: =1
@@ -1471,8 +1472,8 @@
                         MaxLength: =DataSourceInfo([@Tickets_Master], DataSourceInfo.MaxLength, "Subject")
                         Required: =false
                         Update: =DataCardValue36_1.Value
-                        Width: =Parent.Width
-                        WidthFit: =true
+                        Width: =360
+                        WidthFit: =false
                         X: =0
                         Y: =5
                         ZIndex: =1
