--- a/CCFS Tickets/Src/Ticket Information %28In Progress%29.fx.yaml
+++ b/CCFS Tickets/Src/Ticket Information %28In Progress%29.fx.yaml
@@ -45,7 +45,7 @@
         Container5 As groupContainer.horizontalAutoLayoutContainer:
             DropShadow: =DropShadow.Light
             FillPortions: =0
-            Height: =60
+            Height: =50
             LayoutMinHeight: =60
             LayoutMinWidth: =250
             LayoutMode: =LayoutMode.Auto
@@ -90,7 +90,7 @@
                         Color: =RGBA(40, 134, 222, 1)
                         DisabledBorderColor: =RGBA(166, 166, 166, 1)
                         DisabledColor: =RGBA(244, 244, 244, 1)
-                        Height: =30
+                        Height: =25
                         Icon: =Icon.Home
                         OnSelect: |
                             =Navigate(Dashboard)
@@ -102,7 +102,7 @@
                         Color: =RGBA(71, 158, 245, 1)
                         DisabledBorderColor: =RGBA(166, 166, 166, 1)
                         DisabledColor: =RGBA(244, 244, 244, 1)
-                        Height: =30
+                        Height: =25
                         Icon: =Icon.BackArrow
                         OnSelect: =Back()
                         Width: =32
@@ -1337,13 +1337,13 @@
                         DisplayMode: =Parent.DisplayMode
                         DisplayName: =DataSourceInfo([@Tickets_Master],DataSourceInfo.DisplayName,"Asset_ID")
                         Fill: =RGBA(0, 0, 0, 0)
-                        Height: =50
+                        Height: =94
                         MaxLength: =DataSourceInfo([@Tickets_Master], DataSourceInfo.MaxLength, "Asset_ID")
                         Required: =false
                         Update: =DataCardValue57_1.Selected.ID
                         Width: =260
                         WidthFit: =false
-                        X: =0
+                        X: =780
                         Y: =3
                         ZIndex: =1
 
@@ -3401,10 +3401,7 @@
                         ZIndex: =5
 
             Attachments As groupContainer.horizontalAutoLayoutContainer:
-                AlignInContainer: =AlignInContainer.SetByContainer
                 DropShadow: =DropShadow.Light
-                LayoutMinHeight: =100
-                LayoutMinWidth: =250
                 LayoutMode: =LayoutMode.Auto
                 RadiusBottomLeft: =4
                 RadiusBottomRight: =4
@@ -3412,6 +3409,180 @@
                 RadiusTopRight: =4
                 Width: =250
                 ZIndex: =3
+
+                AttachmentContainer_2 As groupContainer.verticalAutoLayoutContainer:
+                    DropShadow: =DropShadow.Light
+                    LayoutDirection: =LayoutDirection.Vertical
+                    LayoutMinHeight: |-
+                        =If(
+                            IsEmpty(Gallery10_4.AllItems),
+                            150,
+                            Parent.Height / 4
+                        )
+                    LayoutMinWidth: =250
+                    LayoutMode: =LayoutMode.Auto
+                    LayoutOverflowY: =LayoutOverflow.Scroll
+                    RadiusBottomLeft: =4
+                    RadiusBottomRight: =4
+                    RadiusTopLeft: =4
+                    RadiusTopRight: =4
+                    Visible: =TicketDataEditForm.Mode <> 1
+                    Width: =Parent.Width/2
+                    ZIndex: =1
+
+                    Label18_33 As label:
+                        Align: =Align.Center
+                        BorderColor: =RGBA(0, 89, 178, 1)
+                        Color: =RGBA(204, 214, 224, 1)
+                        DisabledColor: =RGBA(166, 166, 166, 1)
+                        Fill: =RGBA(102, 133, 163, 1)
+                        Height: =30
+                        PaddingBottom: =7.67
+                        PaddingLeft: =7.67
+                        PaddingRight: =4.63
+                        PaddingTop: =4.63
+                        Size: = Min('Asset Dashboard'.Width / 40,18)
+                        Text: ="Attachments"
+                        Width: =Parent.Width
+                        X: =0.00
+                        Y: =0.00
+                        ZIndex: =2
+
+                    NewAttachmentsBtn_3 As Button:
+                        BasePaletteColor: =
+                        DisplayMode: =DisplayMode.Edit
+                        Font: =""
+                        FontColor: =
+                        FontItalic: =false
+                        FontSize: =0
+                        FontStrikethrough: =false
+                        FontUnderline: =false
+                        FontWeight: =""
+                        Height: =20
+                        LayoutMinHeight: =32
+                        LayoutMinWidth: =96
+                        OnSelect: =Set(NewAttachementContainerVisble,true)
+                        Text: ="New"
+                        Visible: =true
+                        Width: =96
+                        X: =0
+                        Y: =0
+                        ZIndex: =3
+
+                    TextCanvas2_5 As Text:
+                        Align: ='TextCanvas.Align'.Center
+                        AlignInContainer: =AlignInContainer.Start
+                        DisplayMode: =DisplayMode.Edit
+                        Font: =""
+                        FontColor: =
+                        FontItalic: =false
+                        FontStrikethrough: =false
+                        FontUnderline: =false
+                        Height: =32
+                        LayoutMinHeight: =32
+                        LayoutMinWidth: =96
+                        Text: ="No Attachments"
+                        Visible: =IsEmpty(Gallery10_4.AllItems)
+                        Width: =Parent.Width
+                        X: =0
+                        Y: =0
+                        ZIndex: =4
+
+                    "Gallery10_4 As gallery.'BrowseLayout_Flexible_SocialFeed_ver5.0'":
+                        AlignInContainer: =AlignInContainer.SetByContainer
+                        BorderColor: =RGBA(0, 89, 178, 1)
+                        DelayItemLoading: =true
+                        Fill: =RGBA(240, 221, 221, 0)
+                        Items: =Sort(Filter(Ticket_Attachments,Ticket_ID=varTicketID.Ticket_ID),UploadDateTime,SortOrder.Descending)
+                        Layout: =Layout.Vertical
+                        LayoutMinHeight: =Gallery10_4.TemplateHeight*Gallery10_4.AllItemsCount + 25
+                        LayoutMinWidth: =320
+                        LoadingSpinner: =LoadingSpinner.Data
+                        ShowNavigation: =true
+                        TemplatePadding: =4
+                        TemplateSize: =Image7_2.Height+Title12_9.Height+Title12_8.Height+divider_4.Height+8
+                        Visible: |-
+                            =
+                            
+                            
+                            !IsEmpty(Gallery10_4.AllItems)
+                        Width: =Parent.Width
+                        ZIndex: =5
+
+                        Title12_8 As label:
+                            Color: =RGBA(50, 49, 48, 1)
+                            DisabledColor: =RGBA(166, 166, 166, 1)
+                            FontWeight: =If(ThisItem.IsSelected, FontWeight.Bold, FontWeight.Semibold)
+                            Height: =Self.Size * 1.8
+                            OnSelect: =Select(Parent)
+                            PaddingBottom: =0
+                            PaddingRight: =0
+                            PaddingTop: =0
+                            Size: =9
+                            Text: =ThisItem.UploadDateTime
+                            VerticalAlign: =VerticalAlign.Top
+                            Width: =Parent.TemplateWidth /2
+                            ZIndex: =1
+
+                        Title12_9 As label:
+                            Color: =RGBA(50, 49, 48, 1)
+                            DisabledColor: =RGBA(166, 166, 166, 1)
+                            FontWeight: =If(ThisItem.IsSelected, FontWeight.Bold, FontWeight.Semibold)
+                            Height: =Self.Size * 1.8
+                            OnSelect: =Select(Parent)
+                            PaddingBottom: =0
+                            PaddingRight: =0
+                            PaddingTop: =0
+                            Size: =10
+                            Text: =ThisItem.Name
+                            VerticalAlign: =VerticalAlign.Top
+                            Width: =Parent.TemplateWidth /2
+                            X: =657
+                            ZIndex: =2
+
+                        divider_4 As icon.HorizontalLine:
+                            BorderColor: =RGBA(0, 89, 178, 1)
+                            Color: =RGBA(0, 89, 178, 1)
+                            DisabledBorderColor: =RGBA(166, 166, 166, 1)
+                            DisabledColor: =RGBA(244, 244, 244, 1)
+                            Fill: =RGBA(255, 255, 255, 1)
+                            Height: =5
+                            Icon: =Icon.HorizontalLine
+                            OnSelect: =Select(Parent)
+                            Width: =Parent.TemplateWidth
+                            Y: =105
+                            ZIndex: =3
+
+                        Image7_2 As image:
+                            BorderColor: =RGBA(0, 89, 178, 1)
+                            DisabledBorderColor: =RGBA(166, 166, 166, 1)
+                            DisabledFill: =RGBA(244, 244, 244, 1)
+                            Height: =63
+                            Image: |-
+                                =If(
+                                    Or(
+                                        EndsWith(
+                                            ThisItem.Name,
+                                            ".docx"
+                                        ),
+                                        EndsWith(
+                                            ThisItem.Name,
+                                            ".pdf"
+                                        ),
+                                        EndsWith(
+                                            ThisItem.Name,
+                                            ".xlsx"
+                                        )
+                                        // ... add other document types as needed
+                                    ),
+                                    DocumentPlaceHolder,// Replace with the actual reference to your temporary image
+                                    ThisItem.WebURl// Replace with the actual field name if different
+                                )
+                            OnSelect: |
+                                =Launch(ThisItem.WebURl)
+                            Width: =109
+                            Y: =42
+                            ZIndex: =4
 
             ServiceRequestcontainer_1 As groupContainer.verticalAutoLayoutContainer:
                 DropShadow: =DropShadow.Light
@@ -3549,7 +3720,7 @@
             DropShadow: =DropShadow.Semilight
             Fill: =RGBA(255, 255, 255, 1)
             FillPortions: =0
-            Height: =Parent.Height/20
+            Height: =Parent.Height/28
             LayoutMinHeight: =75
             LayoutMinWidth: =250
             LayoutMode: =LayoutMode.Auto
